--- a/css/theme/blood.css
+++ b/css/theme/blood.css
@@ -43,7 +43,7 @@ body {
 .reveal h5,
 .reveal h6 {
   margin: 0 0 20px 0;
-  color: #eee;
+  color: #fff;
   font-family: Ubuntu, "sans-serif";
   font-weight: normal;
   line-height: 2;
