--- a/css/theme/fend.css
+++ b/css/theme/fend.css
@@ -1,26 +1,28 @@
 /**
- * Black theme for reveal.js.
+ * Black theme for reveal.js. This is the opposite of the 'white' theme.
  *
- * Copyright (C) 2011-2012 Hakim El Hattab, http://hakim.se
+ * By Hakim El Hattab, http://hakim.se
  */
-@import url(https://fonts.googleapis.com/css?family=Montserrat:700);
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,700italic);
+@import url(../../lib/font/source-sans-pro/source-sans-pro.css);
+section.has-light-background, section.has-light-background h1, section.has-light-background h2, section.has-light-background h3, section.has-light-background h4, section.has-light-background h5, section.has-light-background h6 {
+  color: #222; }
+
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
 body {
-  background: #111;
-  background-color: #111; }
+  background: #3c9a8b;
+  background-color: #3c9a8b; }
 
 .reveal {
-  font-family: "Open Sans", sans-serif;
-  font-size: 30px;
+  font-family: "Open Sans", Helvetica, sans-serif;
+  font-size: 38px;
   font-weight: normal;
   color: #fff; }
 
 ::selection {
   color: #fff;
-  background: #e7ad52;
+  background: #bfbfbf;
   text-shadow: none; }
 
 .reveal .slides > section,
@@ -39,22 +41,22 @@ body {
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #fff;
-  font-family: "Montserrat", Impact, sans-serif;
-  font-weight: normal;
+  font-family: "Open Sans", Helvetica, sans-serif;
+  font-weight: 600;
   line-height: 2;
-  letter-spacing: -0.03em;
-  text-transform: none;
+  letter-spacing: normal;
+  text-transform: uppercase;
   text-shadow: none;
   word-wrap: break-word; }
 
 .reveal h1 {
-  font-size: 3.77em; }
+  font-size: 2.5em; }
 
 .reveal h2 {
-  font-size: 2.11em; }
+  font-size: 1.6em; }
 
 .reveal h3 {
-  font-size: 1.55em; }
+  font-size: 1.3em; }
 
 .reveal h4 {
   font-size: 1em; }
@@ -204,20 +206,20 @@ body {
  * LINKS
  *********************************************/
 .reveal a {
-  color: #e7ad52;
+  color: #fff;
   text-decoration: none;
   -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
   transition: color .15s ease; }
 
 .reveal a:hover {
-  color: #f3d7ac;
+  color: #d9d9d9;
   text-shadow: none;
   border: none; }
 
 .reveal .roll span:after {
   color: #fff;
-  background: #d08a1d; }
+  background: #d9d9d9; }
 
 /*********************************************
  * IMAGES
@@ -238,7 +240,7 @@ body {
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
-  border-color: #e7ad52;
+  border-color: #fff;
   box-shadow: 5 5 40px rgba(0, 0, 0, 0.55); }
 
 /*********************************************
@@ -246,31 +248,31 @@ body {
  *********************************************/
 .reveal .controls .navigate-left,
 .reveal .controls .navigate-left.enabled {
-  border-right-color: #e7ad52; }
+  border-right-color: #fff; }
 
 .reveal .controls .navigate-right,
 .reveal .controls .navigate-right.enabled {
-  border-left-color: #e7ad52; }
+  border-left-color: #fff; }
 
 .reveal .controls .navigate-up,
 .reveal .controls .navigate-up.enabled {
-  border-bottom-color: #e7ad52; }
+  border-bottom-color: #fff; }
 
 .reveal .controls .navigate-down,
 .reveal .controls .navigate-down.enabled {
-  border-top-color: #e7ad52; }
+  border-top-color: #fff; }
 
 .reveal .controls .navigate-left.enabled:hover {
-  border-right-color: #f3d7ac; }
+  border-right-color: #d9d9d9; }
 
 .reveal .controls .navigate-right.enabled:hover {
-  border-left-color: #f3d7ac; }
+  border-left-color: #d9d9d9; }
 
 .reveal .controls .navigate-up.enabled:hover {
-  border-bottom-color: #f3d7ac; }
+  border-bottom-color: #d9d9d9; }
 
 .reveal .controls .navigate-down.enabled:hover {
-  border-top-color: #f3d7ac; }
+  border-top-color: #d9d9d9; }
 
 /*********************************************
  * PROGRESS BAR
@@ -279,7 +281,7 @@ body {
   background: rgba(0, 0, 0, 0.2); }
 
 .reveal .progress span {
-  background: #e7ad52;
+  background: #fff;
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
