--- a/css/theme/template/settings.scss
+++ b/css/theme/template/settings.scss
@@ -2,12 +2,12 @@
 // overridden by the super-theme
 
 // Background of the presentation
-$backgroundColor: hsl(170, 48%, 52%);
+$backgroundColor: hsl(170, 44%, 42%);
 
 // Primary/body text
 $mainFont: 'Open Sans', sans-serif;
 $mainFontSize: 36px;
-$mainColor: #eee;
+$mainColor: #fff;
 
 // Vertical spacing between blocks of text
 $blockMargin: 20px;
@@ -15,7 +15,7 @@ $blockMargin: 20px;
 // Headings
 $headingMargin: 0 0 $blockMargin 0;
 $headingFont: 'Open Sans', sans-serif;
-$headingColor: #eee;
+$headingColor: #fff;
 $headingLineHeight: 2;
 $headingLetterSpacing: normal;
 $headingTextTransform: uppercase;
@@ -29,8 +29,8 @@ $heading3Size: 1.55em;
 $heading4Size: 1.00em;
 
 // Links and actions
-$linkColor: #13DAEC;
-$linkColorHover: lighten( $linkColor, 20% );
+$linkColor: #fff;
+$linkColorHover: darken( $linkColor, 20% );
 
 // Text selection
 $selectionBackgroundColor: #FF5E99;
