Added new theme

--- a/css/theme/template/settings.scss
+++ b/css/theme/template/settings.scss
@@ -7,7 +7,7 @@ $backgroundColor: hsl(170, 48%, 52%);
 // Primary/body text
 $mainFont: 'Open Sans', sans-serif;
 $mainFontSize: 36px;
-$mainColor: #eee;
+$mainColor: #fff;
 
 // Vertical spacing between blocks of text
 $blockMargin: 20px;
@@ -15,7 +15,7 @@ $blockMargin: 20px;
 // Headings
 $headingMargin: 0 0 $blockMargin 0;
 $headingFont: 'Open Sans', sans-serif;
-$headingColor: #eee;
+$headingColor: #fff;
 $headingLineHeight: 2;
 $headingLetterSpacing: normal;
 $headingTextTransform: uppercase;
