--- a/css/theme/league.css
+++ b/css/theme/league.css
@@ -24,7 +24,7 @@ body {
   font-family: "Open Sans", sans-serif;
   font-size: 36px;
   font-weight: normal;
-  color: #eee; }
+  color: #fff; }
 
 ::selection {
   color: #fff;
@@ -46,7 +46,7 @@ body {
 .reveal h5,
 .reveal h6 {
   margin: 0 0 20px 0;
-  color: #eee;
+  color: #fff;
   font-family: "Open Sans", sans-serif;
   font-weight: normal;
   line-height: 2;
