--- a/css/theme/fend.css
+++ b/css/theme/fend.css
@@ -7,6 +7,11 @@
 section.has-light-background, section.has-light-background h1, section.has-light-background h2, section.has-light-background h3, section.has-light-background h4, section.has-light-background h5, section.has-light-background h6 {
   color: #222; }
 
+.reveal pre {
+  border-radius: 4px;
+  font-size: 1.5rem;
+  line-height: 1.5; }
+
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
