--- a/css/theme/fend.css
+++ b/css/theme/fend.css
@@ -7,11 +7,6 @@
 section.has-light-background, section.has-light-background h1, section.has-light-background h2, section.has-light-background h3, section.has-light-background h4, section.has-light-background h5, section.has-light-background h6 {
   color: #222; }
 
-.reveal pre {
-  border-radius: 4px;
-  font-size: 1.5rem;
-  line-height: 1.5; }
-
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
@@ -290,3 +285,23 @@ body {
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
+
+.reveal blockquote {
+  padding: 1em;
+  line-height: 2;
+  -webkit-border-radius: 7px;
+  border-radius: 7px;
+  background: rgba(0, 0, 0, 0.3);
+  box-shadow: 1px 1px 0px #293d3a, 2px 2px 0px #293d3a, 3px 3px 0px #293d3a, 4px 4px 0px #293d3a, 5px 5px 0px #293d3a, 6px 6px 0px #293d3a, 7px 7px 0px #293d3a; }
+
+.reveal pre {
+  border-radius: 4px; }
+
+.reveal pre code {
+  border-radius: 4px;
+  font-size: 2rem;
+  line-height: 1.5; }
+
+.reveal strong {
+  background-color: #333;
+  padding: 5px; }
