--- a/css/theme/fend.css
+++ b/css/theme/fend.css
@@ -11,8 +11,8 @@ section.has-light-background, section.has-light-background h1, section.has-light
  * GLOBAL STYLES
  *********************************************/
 body {
-  background: #3c9a8b;
-  background-color: #3c9a8b; }
+  background: #509B8C;
+  background-color: #509B8C; }
 
 .reveal {
   font-family: "Open Sans", Helvetica, sans-serif;
@@ -22,7 +22,7 @@ body {
 
 ::selection {
   color: #fff;
-  background: #bfbfbf;
+  background: #80252d;
   text-shadow: none; }
 
 .reveal .slides > section,
@@ -206,20 +206,20 @@ body {
  * LINKS
  *********************************************/
 .reveal a {
-  color: #fff;
+  color: #CE5660;
   text-decoration: none;
   -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
   transition: color .15s ease; }
 
 .reveal a:hover {
-  color: #d9d9d9;
+  color: #c8424d;
   text-shadow: none;
   border: none; }
 
 .reveal .roll span:after {
   color: #fff;
-  background: #d9d9d9; }
+  background: #a7303a; }
 
 /*********************************************
  * IMAGES
@@ -240,7 +240,7 @@ body {
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
-  border-color: #fff;
+  border-color: #CE5660;
   box-shadow: 5 5 40px rgba(0, 0, 0, 0.55); }
 
 /*********************************************
@@ -248,31 +248,31 @@ body {
  *********************************************/
 .reveal .controls .navigate-left,
 .reveal .controls .navigate-left.enabled {
-  border-right-color: #fff; }
+  border-right-color: #CE5660; }
 
 .reveal .controls .navigate-right,
 .reveal .controls .navigate-right.enabled {
-  border-left-color: #fff; }
+  border-left-color: #CE5660; }
 
 .reveal .controls .navigate-up,
 .reveal .controls .navigate-up.enabled {
-  border-bottom-color: #fff; }
+  border-bottom-color: #CE5660; }
 
 .reveal .controls .navigate-down,
 .reveal .controls .navigate-down.enabled {
-  border-top-color: #fff; }
+  border-top-color: #CE5660; }
 
 .reveal .controls .navigate-left.enabled:hover {
-  border-right-color: #d9d9d9; }
+  border-right-color: #c8424d; }
 
 .reveal .controls .navigate-right.enabled:hover {
-  border-left-color: #d9d9d9; }
+  border-left-color: #c8424d; }
 
 .reveal .controls .navigate-up.enabled:hover {
-  border-bottom-color: #d9d9d9; }
+  border-bottom-color: #c8424d; }
 
 .reveal .controls .navigate-down.enabled:hover {
-  border-top-color: #d9d9d9; }
+  border-top-color: #c8424d; }
 
 /*********************************************
  * PROGRESS BAR
@@ -281,7 +281,7 @@ body {
   background: rgba(0, 0, 0, 0.2); }
 
 .reveal .progress span {
-  background: #fff;
+  background: #CE5660;
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
@@ -291,11 +291,12 @@ body {
   line-height: 2;
   -webkit-border-radius: 7px;
   border-radius: 7px;
-  background: rgba(0, 0, 0, 0.3);
-  box-shadow: 1px 1px 0px #293d3a, 2px 2px 0px #293d3a, 3px 3px 0px #293d3a, 4px 4px 0px #293d3a, 5px 5px 0px #293d3a, 6px 6px 0px #293d3a, 7px 7px 0px #293d3a; }
+  background: #478a7d;
+  box-shadow: 1px 1px 0px #2d584f, 2px 2px 0px #2d584f, 3px 3px 0px #2d584f, 4px 4px 0px #2d584f, 5px 5px 0px #2d584f, 6px 6px 0px #2d584f, 7px 7px 0px #2d584f; }
 
 .reveal pre {
-  border-radius: 4px; }
+  border-radius: 4px;
+  box-shadow: none; }
 
 .reveal pre code {
   border-radius: 4px;
@@ -304,4 +305,9 @@ body {
 
 .reveal strong {
   background-color: #333;
-  padding: 5px; }
+  padding: 0px 10px 0px 10px; }
+
+.reveal em {
+  background-color: #D6D36F;
+  color: #333;
+  padding: 0px 10px 0px 5px; }
