--- a/css/theme/template/settings.scss
+++ b/css/theme/template/settings.scss
@@ -5,7 +5,7 @@
 $backgroundColor: hsl(170, 44%, 42%);
 
 // Primary/body text
-$mainFont: 'Open Sans', sans-serif;
+$mainFont: 'Lora', serif;
 $mainFontSize: 36px;
 $mainColor: #fff;
 
@@ -14,7 +14,7 @@ $blockMargin: 20px;
 
 // Headings
 $headingMargin: 0 0 $blockMargin 0;
-$headingFont: 'Open Sans', sans-serif;
+$headingFont: 'Lora', serif;
 $headingColor: #fff;
 $headingLineHeight: 2;
 $headingLetterSpacing: normal;
