--- a/css/theme/source/fend.scss
+++ b/css/theme/source/fend.scss
@@ -13,6 +13,7 @@
 
 // Include theme-specific fonts
 @import url(../../lib/font/source-sans-pro/source-sans-pro.css);
+@import url(../../lib/font/lora/lora.css);
 
 
 // Override theme settings (see ../template/settings.scss)
@@ -26,8 +27,8 @@ $mainColor: #fff;
 $headingColor: #fff;
 
 $mainFontSize: 38px;
-$mainFont: 'Open Sans', Helvetica, sans-serif;
-$headingFont: 'Open Sans', Helvetica, sans-serif;
+$mainFont: 'Lora', serif;
+$headingFont: 'Lora', serif;
 $headingTextShadow: none;
 $headingLetterSpacing: normal;
 $headingTextTransform: uppercase;
@@ -63,12 +64,12 @@ section.has-light-background {
   border-radius: 7px;
   background: darken($backgroundColor, 5%);
   box-shadow: 1px 1px 0px darken($backgroundColor, 20%),
-           2px 2px 0px darken($backgroundColor, 20%),
-           3px 3px 0px darken($backgroundColor, 20%),
-           4px 4px 0px darken($backgroundColor, 20%),
-           5px 5px 0px darken($backgroundColor, 20%),
-           6px 6px 0px darken($backgroundColor, 20%),
-           7px 7px 0px darken($backgroundColor, 20%);
+  2px 2px 0px darken($backgroundColor, 20%),
+  3px 3px 0px darken($backgroundColor, 20%),
+  4px 4px 0px darken($backgroundColor, 20%),
+  5px 5px 0px darken($backgroundColor, 20%),
+  6px 6px 0px darken($backgroundColor, 20%),
+  7px 7px 0px darken($backgroundColor, 20%);
 
 }
 
@@ -92,4 +93,13 @@ section.has-light-background {
   background-color: #D6D36F;
   color: #333;
   padding: 0px 10px 0px 5px;
+  font-style: normal;
+}
+
+.reveal .reference{
+  font-size: 1rem;
+  color: #fff;
+  position: absolute;
+  bottom: -100;
+  left: -100;
 }
