--- a/css/theme/source/php.scss
+++ b/css/theme/source/php.scss
@@ -13,7 +13,7 @@
 
 // Include theme-specific fonts
 @import url(../../lib/font/source-sans-pro/source-sans-pro.css);
-@import url(../../lib/font/source-sans-pro/opensans.css);
+@import url(../../lib/font/opensans/opensans.css);
 
 
 // Override theme settings (see ../template/settings.scss)
@@ -92,4 +92,30 @@ section.has-dark-background {
   position: absolute;
   bottom: -100;
   left: 0;
+}
+
+.reveal table, td, tr, th{
+  text-align: left; 
+  border: 2px solid #444; 
+  color: #444;
+  font: 100%/1.5 monospace; 
+}
+.reveal th{
+  background-color: #645264;
+  color: #fff;
+  border-right: 2px solid #fff;
+}
+.reveal th:last-of-type{
+  border-right: 2px solid #444;
+}
+.reveal td{
+  border: 2px solid #444;
+}
+.reveal table{
+  margin-bottom: 3rem;
+}
+.reveal .slides section .fragment.highlight-red.visible{
+  background: #f0ad4e;
+  color: white;
+  border-radius: 4px;
 }
