--- a/css/theme/template/theme.scss
+++ b/css/theme/template/theme.scss
@@ -22,6 +22,12 @@ body {
 	text-shadow: none;
 }
 
+::-moz-selection {
+	color: $selectionColor;
+	background: $selectionBackgroundColor;
+	text-shadow: none;
+}
+
 .reveal .slides>section,
 .reveal .slides>section>section {
 	line-height: 1.3;
@@ -166,8 +172,7 @@ body {
 
 	word-wrap: break-word;
 
-	box-shadow: 0px 0px 2px rgba(0,0,0,0.3);
-	background: #2D2D2D;
+	box-shadow: 0px 0px 6px rgba(0,0,0,0.3);
 }
 .reveal code {
 	font-family: monospace;
@@ -264,7 +269,9 @@ body {
 .reveal section img {
 	margin: 15px 0px;
 	background: rgba(255,255,255,0.12);
-	box-shadow: 5 5 40px rgba(0, 0, 0, 0.15);
+	border: 4px solid $mainColor;
+
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
 }
 
 	.reveal section img.plain {
@@ -282,7 +289,7 @@ body {
 		background: rgba(255,255,255,0.2);
 		border-color: $linkColor;
 
-		box-shadow: 5 5 40px rgba(0, 0, 0, 0.55);
+		box-shadow: 0 0 20px rgba(0, 0, 0, 0.55);
 	}
 
 
