--- a/lib/prismjs/prism.css
+++ b/lib/prismjs/prism.css
@@ -50,7 +50,7 @@ code[class*="language-"]::selection, code[class*="language-"] ::selection {
 /* Code blocks */
 pre[class*="language-"] {
 	padding: 1em;
-	margin: .5em 0;
+	/* margin: .5em 0; */
 	overflow: auto;
 }
 
@@ -106,7 +106,7 @@ pre[class*="language-"] {
 .language-css .token.string,
 .style .token.string {
 	color: #a67f59;
-	background: hsla(0, 0%, 100%, .5);
+	background: none;
 }
 
 .token.atrule,
