--- a/lib/prismjs/prism.css
+++ b/lib/prismjs/prism.css
@@ -1,4 +1,5 @@
-/* http://prismjs.com/download.html?themes=prism&languages=markup+css+clike+javascript+bash+json+php+jsx&plugins=line-highlight+line-numbers */
+/* PrismJS 1.9.0
+http://prismjs.com/download.html?themes=prism&languages=markup+css+clike+javascript+git+http+json+php+pug+jsx+sass+scss&plugins=line-highlight+line-numbers */
 /**
  * prism.js default theme for JavaScript, CSS and HTML
  * Based on dabblet (http://dabblet.com)
@@ -50,7 +51,7 @@ code[class*="language-"]::selection, code[class*="language-"] ::selection {
 /* Code blocks */
 pre[class*="language-"] {
 	padding: 1em;
-	/* margin: .5em 0; */
+	margin: .5em 0;
 	overflow: auto;
 }
 
@@ -106,7 +107,6 @@ pre[class*="language-"] {
 .language-css .token.string,
 .style .token.string {
 	color: #a67f59;
-	background: none;
 }
 
 .token.atrule,
@@ -181,6 +181,11 @@ pre[data-line] {
 		top: auto;
 		bottom: .4em;
 	}
+
+.line-numbers .line-highlight:before,
+.line-numbers .line-highlight:after {
+	content: none;
+}
 
 pre.line-numbers {
 	position: relative;
