--- a/css/theme/default.css
+++ b/css/theme/default.css
@@ -3,7 +3,7 @@
  *
  * @jesperorb
  */
-@import url(https://fonts.googleapis.com/css?family=Ubuntu:400,400i,700,700i);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,700);
 section.has-dark-background, section.has-dark-background h1, section.has-dark-background h2, section.has-dark-background h3, section.has-dark-background h4, section.has-dark-background h5, section.has-dark-background h6 {
   color: #fff; }
 
@@ -15,19 +15,19 @@ body {
   background-color: #fff; }
 
 .reveal {
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Roboto Mono", monospace;
   font-size: 40px;
   font-weight: normal;
   color: #222; }
 
 ::selection {
   color: #fff;
-  background: #c8b8c6;
+  background: #e587a6;
   text-shadow: none; }
 
 ::-moz-selection {
   color: #fff;
-  background: #c8b8c6;
+  background: #e587a6;
   text-shadow: none; }
 
 .reveal .slides > section,
@@ -46,12 +46,12 @@ body {
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #222;
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Roboto Mono", monospace;
   font-weight: 600;
   line-height: 1.2;
   letter-spacing: 0.4rem;
   text-transform: uppercase;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  text-shadow: 0 1px 2px transparent;
   word-wrap: break-word; }
 
 .reveal h1 {
@@ -210,20 +210,20 @@ body {
  * LINKS
  *********************************************/
 .reveal a {
-  color: #90708c;
+  color: #c22a5d;
   text-decoration: none;
   -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
   transition: color .15s ease; }
 
 .reveal a:hover {
-  color: #b19baf;
+  color: #dc5d87;
   text-shadow: none;
   border: none; }
 
 .reveal .roll span:after {
   color: #fff;
-  background: #654e62; }
+  background: #831c3f; }
 
 /*********************************************
  * IMAGES
@@ -245,7 +245,7 @@ body {
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
-  border-color: #90708c;
+  border-color: #c22a5d;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
 
 /*********************************************
@@ -253,31 +253,31 @@ body {
  *********************************************/
 .reveal .controls .navigate-left,
 .reveal .controls .navigate-left.enabled {
-  border-right-color: #90708c; }
+  border-right-color: #c22a5d; }
 
 .reveal .controls .navigate-right,
 .reveal .controls .navigate-right.enabled {
-  border-left-color: #90708c; }
+  border-left-color: #c22a5d; }
 
 .reveal .controls .navigate-up,
 .reveal .controls .navigate-up.enabled {
-  border-bottom-color: #90708c; }
+  border-bottom-color: #c22a5d; }
 
 .reveal .controls .navigate-down,
 .reveal .controls .navigate-down.enabled {
-  border-top-color: #90708c; }
+  border-top-color: #c22a5d; }
 
 .reveal .controls .navigate-left.enabled:hover {
-  border-right-color: #b19baf; }
+  border-right-color: #dc5d87; }
 
 .reveal .controls .navigate-right.enabled:hover {
-  border-left-color: #b19baf; }
+  border-left-color: #dc5d87; }
 
 .reveal .controls .navigate-up.enabled:hover {
-  border-bottom-color: #b19baf; }
+  border-bottom-color: #dc5d87; }
 
 .reveal .controls .navigate-down.enabled:hover {
-  border-top-color: #b19baf; }
+  border-top-color: #dc5d87; }
 
 /*********************************************
  * PROGRESS BAR
@@ -286,7 +286,7 @@ body {
   background: rgba(0, 0, 0, 0.2); }
 
 .reveal .progress span {
-  background: #90708c;
+  background: #c22a5d;
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
@@ -310,22 +310,35 @@ body {
 
 .reveal strong {
   display: inline-block;
-  background-color: #90708c;
+  background-color: #c22a5d;
   color: #fff;
   font-style: normal;
   padding: 5px 10px; }
 
+.reveal h1 em {
+  padding: 2rem; }
+
 .reveal h1 strong {
+  color: red;
+  -webkit-text-fill-color: transparent;
+  background: -webkit-gradient(linear, left top, right top, from(#f79533), color-stop(15%, #f79533), color-stop(30%, #ef4e7b), color-stop(44%, #a166ab), color-stop(72%, #1098ad), color-stop(86%, #07b39b), to(#07b39b));
+  background: linear-gradient(90deg, #f79533, #f79533 15%, #ef4e7b 30%, #a166ab 44%, #1098ad 72%, #07b39b 86%, #07b39b);
+  background: -o-linear-gradient(transparent, transparent);
+  -webkit-background-clip: text;
+  font-size: 6rem;
+  font-weight: bolder;
+  -webkit-transition: .4s ease;
+  transition: .4s ease;
+  cursor: pointer;
+  position: relative;
   display: inline-block;
-  background-color: #90708c;
-  color: #fff;
-  font-style: normal;
-  padding: 5px 10px;
-  box-shadow: 1px 1px 0 #735a70, 2px 2px 0 #735a70, 3px 3px 0 #735a70, 4px 4px 0 #735a70; }
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  text-shadow: 0px 0px 4px rgba(100, 100, 100, 0.1); }
 
 .reveal em {
   display: inline-block;
-  background-color: #395c6b;
+  background-color: #6C9986;
   color: #fff;
   font-style: normal;
   padding: 5px 10px; }
@@ -342,4 +355,29 @@ body {
 
 .reveal p {
   line-height: 1.5;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.2); }
+  /*text-shadow: 0 1px 0 rgba(0,0,0,0.2);*/ }
+
+.reveal section img {
+  background: none;
+  box-shadow: none; }
+
+.reveal .two-columns {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.reveal .two-columns > pre {
+  flex: 2; }
+
+.reveal .two-columns > div {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around; }
+
+.reveal .two-columns > div > * {
+  width: 100px;
+  height: 100px;
+  border-radius: 5px;
+  padding: 1rem; }
